# Project2.TGBot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pre-commit-config.yaml  pyproject.toml
backend/: Dockerfile  main.py  requirements.txt
backend/src/: dependencies.py  log.py  models.py  validator.py
backend/src/components/: envconfig.py  psql.py  psql_core.py  redis.py  validator.py
backend/static/: access_denied.html  auth.html  login_complete.html  logout_complete.html  registration_complete.html
bot/: Dockerfile  main.py  pytest.ini  requirements.txt
bot/config/: config.json
bot/migrations/: 01_add_tables.sql  insert.sql
bot/scripts/: Dockerfile  main.py  run_migrations.py  run_sql.py  start_local_service.py
bot/scripts/sql/: insert_word_dataset.sql  local_service.sql
bot/scripts/trash/: dataset_convert.py  duplicates_file.csv  oxford-5k.csv  res.csv  res_trans_no_dubl.csv  res_with_translate.csv
bot/src/: bot.py  dependencies.py  log.py  utils.py
bot/src/components/: config.py  envconfig.py  image_builder.py  lesson_dto.py  lesson_handler.py  lesson_init_processor.py  menu_builder.py  practice_init_processor.py  repetition_handler.py  repetition_init_processor.py  start_handler.py  user_state_processor.py
bot/src/db/: docker-compose.yml  psql.py  redis.py
bot/src/handlers/: echo.py  help.py  image_handler.py  lesson_handler.py  logout_handler.py  practice_handler.py  prectice_handler.py  repetition_handler.py  setting_handler.py  start.py  start_handler.py  statistic_handler.py
bot/src/helpfuncs/: menu.py
bot/src/migrations/: 01_add_tables.sql
bot/src/models/: callback.py  enums.py  lesson_dto.py  user.py  word.py
bot/src/repository/: user_repository.py  word_repository.py  wordinprogress_repository.py
bot/src/scripts/: run_migrations.py
bot/tests/: conftest.py  test_db.py  test_fetch.py  test_fetch_user.py  test_menu.py  test_psql_fetch_user.py  test_psql_fetch_user_by_id.py  test_psql_fetch_user_by_tg_login.py  test_psql_fetch_word.py  test_psql_fetch_words_for_answer.py  test_psql_fetch_words_for_lesson.py  test_psql_fetch_words_for_repetition.py  test_psql_tables.py  test_redis_get_data.py  test_redis_get_state.py  test_utils.py
tools/: .flake8  pre-commit
