[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["k1cker666 <pomoymu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.tgbot.dependencies]
python-telegram-bot = "^21.1.1"
psycopg = {extras = ["binary"], version = "^3.1.19"}
psycopg-pool = "^3.2.2"
redis = {extras = ["hiredis"], version = "^5.0.4"}
pydantic = "^2.7.1"
loguru = "^0.7.2"
pillow = "^10.3.0"
pytest = "^8.2.0"


[tool.poetry.group.migrations.dependencies]
psycopg = {extras = ["binary"], version = "^3.1.19"}
loguru = "^0.7.2"
click = "^8.1.7"


[tool.poetry.group.backend.dependencies]
psycopg = {extras = ["binary"], version = "^3.1.19"}
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
